--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
     "react-router-dom": "^7.9.4",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
