--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@tailwindcss/vite": "^4.1.14",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router": "^7.8.2",
     "react-router-dom": "^7.9.4",
     "tailwind-scrollbar": "^4.0.2",
