--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-leaflet": "^5.0.0",
     "react-router": "^7.8.2",
     "react-router-dom": "^7.9.4",
+    "react-zoom-pan-pinch": "^3.7.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.14"
   },
